# yf_parqed

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  daemon-manage.sh  migration_plan_1d.json  pyproject.toml  setup-daemon.sh  storage_config.json  xetra_fetch_log.txt
.github/: AGENTS_SUMMARY.md  ARCHITECTURE.md  DATA_SAFETY_STRATEGY.md  DEVELOPMENT_GUIDE.md  STORAGE_STRUCTURE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  copilot-instructions.md
docs/: CLI_SIMPLIFICATION.md  DAEMON_MODE.md  INTELLIGENT_CLI.md  RECOVERY_CHANGES.md  release-notes.md  roadmap.md
docs/adr/: 2025-10-10-yahoo-finance-data-pipeline.md  2025-10-12-duckdb-query-layer.md  2025-10-12-partition-aware-storage.md  2025-10-12-xetra-delayed-data.md  2025-12-05-ohlcv-aggregation-service.md  2025-12-06-separation-of-concerns.md  ADR_INDEX.md
docs/adr/idea/: 2025-10-12-duckdb-query-layer.md  (+1 more)
docs/daemon/: INSTALLATION.md  README.md  USAGE.md  USAGE_XETRA.md  USAGE_YFINANCE.md  setup-daemon.sh
docs/data/: DETR-posttrade-2025-10-31T13_54.json  mfs.deutsche-boerse.com.html
docs/xetra/: ARCHITECTURE_UPDATE.md  DAEMON_TRADING_HOURS_ANALYSIS.md  GPT-4_prompt.md  IMPLEMENTATION_CHECKLIST.md  PHASE1_5_TESTING_SUMMARY.md  RATE_LIMITING_IMPLEMENTATION.md  RATE_LIMIT_DISCOVERY.md  RATE_LIMIT_DISCOVERY_SUMMARY.md  README.md  xetra_architecture_summary.md  xetra_implementation_addendum.md  xetra_implementation_plan.md  xetra_isin_mapping_comparison.md  xetra_isin_mapping_decision.md  xetra_isin_mapping_strategy.md  xetra_key_findings_summary.md  xetra_questions_answered.md
examples/: xetra@.service
src/tools/: fix_migration.py  migration_partition_benchmark.py
src/yf_parqed/: __init__.py  __main__.py  config_service.py  data_fetcher.py  get_data_parquet.py  interval_scheduler.py  main.py  migration_plan.py  parquet_recovery.py  partition_migration_service.py  partition_path_builder.py  partitioned_storage_backend.py  primary_class.py  run_lock.py  storage_backend.py  ticker_registry.py  xetra_cli.py  xetra_fetcher.py  xetra_service.py  yfinance_cli.py
tests/: test_backend_recovery_parity.py  test_cleanup_expanded.py  test_cli.py  test_cli_integration.py  test_cli_locks.py  test_config_service.py  test_data_fetcher.py  test_interval_scheduler.py  test_migration_plan.py  test_partition_migrate_cli.py  test_partition_migration_service.py  test_partition_path_builder.py  test_partition_write_hardening.py  test_partitioned_storage_backend.py  test_partitioned_storage_default.py  test_rate_limits.py  test_run_lock.py  test_run_lock_cli.py  test_storage_backend.py  test_storage_backend_recovery.py  test_storage_operations.py  test_ticker_operations.py  test_ticker_registry.py  test_trading_hours_checker.py  test_update_end_to_end.py  test_update_loop.py  test_xetra_cli.py  test_xetra_consolidation.py  test_xetra_daemon_hours.py  test_xetra_daemon_integration.py  test_xetra_fetcher.py  test_xetra_initial_fetch.py  test_xetra_integration.py  test_xetra_live_api.py  test_xetra_parser.py  test_xetra_service.py  test_xetra_storage.py  test_yf_daemon.py
tools/: migrate_ticker_files.py  migration_benchmark_checker.py  migration_partition_benchmark.py  reformat_stocklists.py
(+28 files in other folders)
