[project]
name = "yf-parqed"
version = "0.1.0"
description = "Persistent storage of yfinance ticker data in parquet"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pyarrow>=18.1.0",
    "typer>=0.15.1",
    "yfinance[nospam]==0.2.56",
]

[project.scripts]
yf-parqed = "yf_parqed.main:app"

[project.entry-points."pipx.run"]
yf-parqed = "yf_parqed.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
